# toor_craft

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  main.cpp  output.txt
examples/data/: devices.yaml  homes.yaml  sensors.yaml
examples/schemas/: device.yaml  home.yaml  sensor.yaml
src/: CMakeLists.txt
src/Command/: CMakeLists.txt  Command.h  LuaCommand.cpp  LuaCommand.h
src/Command/LuaManager/: FileSystemFactory.cpp  FileSystemFactory.h  FileSystemInterface.h  LuaManager.cpp  LuaManager.h  NativeFileSystem.cpp  NativeFileSystem.h  WasmFileSystem.cpp  WasmFileSystem.h
src/Entity/: CMakeLists.txt  Entity.cpp  Entity.h
src/EntityManager/: CMakeLists.txt  EntityManager.cpp  EntityManager.h
src/EntityManager/tests/: test_EntityManager.cpp
src/EntitySchema/: CMakeLists.txt  EntitySchema.cpp  EntitySchema.h
src/Field/: BooleanField.cpp  BooleanField.h  BooleanFieldSchema.h  CMakeLists.txt  EnumField.cpp  EnumField.h  EnumFieldSchema.h  Field.h  FieldSchema.h  FloatField.cpp  FloatField.h  FloatFieldSchema.h  IntegerField.cpp  IntegerField.h  StringField.cpp  StringField.h  StringFieldSchema.h
src/FieldFactory/: CMakeLists.txt  FieldSchemaFactory.cpp
src/FieldSchema/: ArrayFieldSchema.cpp  ArrayFieldSchema.h  BooleanFieldSchema.cpp  BooleanFieldSchema.h  CMakeLists.txt  EnumFieldSchema.cpp  EnumFieldSchema.h  FieldSchema.h  FloatFieldSchema.cpp  FloatFieldSchema.h  IntegerFieldSchema.cpp  IntegerFieldSchema.h  ObjectFieldSchema.cpp  ObjectFieldSchema.h  ReferenceFieldSchema.cpp  ReferenceFieldSchema.h  StringFieldSchema.cpp  StringFieldSchema.h
src/FieldSchemaFactory/: CMakeLists.txt  FieldSchemaFactory.cpp  FieldSchemaFactory.h
src/FieldValue/: ArrayFieldValue.cpp  ArrayFieldValue.h  BooleanFieldValue.cpp  BooleanFieldValue.h  CMakeLists.txt  EnumFieldValue.cpp  EnumFieldValue.h  FieldValue.h  FloatFieldValue.cpp  FloatFieldValue.h  IntegerFieldValue.cpp  IntegerFieldValue.h  ObjectFieldValue.cpp  ObjectFieldValue.h  ReferenceFieldValue.cpp  ReferenceFieldValue.h  StringFieldValue.cpp  StringFieldValue.h
src/FieldValueFactory/: CMakeLists.txt  FieldValueFactory.cpp  FieldValueFactory.h
src/SchemaManager/: CMakeLists.txt  SchemaManager.cpp  SchemaManager.h
src/SchemaManager/tests/: test_SchemaManager.cpp
src/ToorCraftAPI/: CMakeLists.txt  ToorCraftAPI.cpp  ToorCraftAPI.h
src/ToorCraftAPI/tests/: test_ToorCraftAPI.cpp
src/ToorCraftEngine/: CMakeLists.txt  ToorCraftEngine.cpp  ToorCraftEngine.h
src/ToorCraftEngine/tests/: test_ToorCraftEngine.cpp  test_ToorCraftEngine_Errors.cpp
src/ToorCraftJSON/: CMakeLists.txt  ToorCraftJSON.cpp  ToorCraftJSON.h
src/ToorCraftJSON/tests/: test_ToorCraftJSON.cpp
src/ToorCraftRouter/: CMakeLists.txt  ToorCraftRouter.cpp  ToorCraftRouter.h
src/ToorCraftRouter/tests/: test_ToorCraftRouter.cpp
wasm/: glue.js
