add_subdirectory(FieldSchema)
add_subdirectory(FieldSchemaFactory)
add_subdirectory(FieldValue)
add_subdirectory(FieldValueFactory)
add_subdirectory(EntitySchema)
add_subdirectory(Entity)
add_subdirectory(EntityManager)
add_subdirectory(Command)
add_subdirectory(SchemaManager)
add_subdirectory(ToorCraftEngine)
add_subdirectory(ToorCraftAPI)